updated course details api
