# api-doc/Institute-api-service-openapi.yaml
@@ -361,7 +361,7 @@ paths:
   /institute-open-registration:
     post:
       tags:
-        - institute Open Registration
+        - Institute Open Registration
       summary: Registration
       description: API endpoint to create a institute.A successful request response will show 201 HTTP status code
       requestBody:
@@ -467,7 +467,7 @@ paths:
                     upazila_title_en: null
                     institute_id: 1
                     institute_title_en: Prof. Shyann Armstrong
-                    institutetitle: Dr. Cristopher Schiller V
+                    institute_title: Dr. Cristopher Schiller V
                     branch_id: 2
                     branch_title_en: Trevion Gutmann
                     branch_title: Mr. Davin Yundt PhD
@@ -521,7 +521,7 @@ paths:
                   upazila_title_en: null
                   institute_id: 1
                   institute_title_en: Prof. Shyann Armstrong
-                  institutetitle: Dr. Cristopher Schiller V
+                  institute_title: Dr. Cristopher Schiller V
                   branch_id: 2
                   branch_title_en: Trevion Gutmann
                   branch_title: Mr. Davin Yundt PhD
@@ -578,7 +578,7 @@ paths:
                   upazila_title_en: null
                   institute_id: 1
                   institute_title_en: Prof. Shyann Armstrong
-                  institutetitle: Dr. Cristopher Schiller V
+                  institute_title: Dr. Cristopher Schiller V
                   branch_id: 2
                   branch_title_en: Trevion Gutmann
                   branch_title: Mr. Davin Yundt PhD
@@ -637,7 +637,7 @@ paths:
                   upazila_title_en: null
                   institute_id: 1
                   institute_title_en: Prof. Shyann Armstrong
-                  institutetitle: Dr. Cristopher Schiller V
+                  institute_title: Dr. Cristopher Schiller V
                   branch_id: 2
                   branch_title_en: Trevion Gutmann
                   branch_title: Mr. Davin Yundt PhD
@@ -955,7 +955,7 @@ paths:
                     title: Eulah Green
                     institute_id: 1
                     institute_title_en: Prof. Shyann Armstrong
-                    institutetitle: Dr. Cristopher Schiller V
+                    institute_title: Dr. Cristopher Schiller V
                     code: aliquid-enim-quisquam-qui-quia-id-tenetur-optio-voluptatem-sequi-maiores-neque-non-voluptatem-modi-n
                     logo: softBd.jpg
                     description: Non sint aut sunt odio amet. Architecto laboriosam aut quos error totam ea sed quos. Dolore perferendis laboriosam maxime qui rerum.
@@ -993,7 +993,7 @@ paths:
                   title: Eulah Green
                   institute_id: 1
                   institute_title_en: Prof. Shyann Armstrong
-                  institutetitle: Dr. Cristopher Schiller V
+                  institute_title: Dr. Cristopher Schiller V
                   code: aliquid-enim-quisquam-qui-quia-id-tenetur-optio-voluptatem-sequi-maiores-neque-non-voluptatem-modi-n
                   logo: softBd.jpg
                   description: Non sint aut sunt odio amet. Architecto laboriosam aut quos error totam ea sed quos. Dolore perferendis laboriosam maxime qui rerum.
@@ -1034,7 +1034,7 @@ paths:
                   title: Eulah Green
                   institute_id: 1
                   institute_title_en: Prof. Shyann Armstrong
-                  institutetitle: Dr. Cristopher Schiller V
+                  institute_title: Dr. Cristopher Schiller V
                   code: aliquid-enim-quisquam-qui-quia-id-tenetur-optio-voluptatem-sequi-maiores-neque-non-voluptatem-modi-n
                   logo: softBd.jpg
                   description: Non sint aut sunt odio amet. Architecto laboriosam aut quos error totam ea sed quos. Dolore perferendis laboriosam maxime qui rerum.
@@ -1078,7 +1078,7 @@ paths:
                   title: Eulah Green
                   institute_id: 1
                   institute_title_en: Prof. Shyann Armstrong
-                  institutetitle: Dr. Cristopher Schiller V
+                  institute_title: Dr. Cristopher Schiller V
                   code: aliquid-enim-quisquam-qui-quia-id-tenetur-optio-voluptatem-sequi-maiores-neque-non-voluptatem-modi-n
                   logo: softBd.jpg
                   description: Non sint aut sunt odio amet. Architecto laboriosam aut quos error totam ea sed quos. Dolore perferendis laboriosam maxime qui rerum.
@@ -1416,7 +1416,7 @@ paths:
                   query_time: 0
   /batches/{batchId}/assign-trainer-to-batch:
     post:
-      summary: assign trainer to batch
+      summary: Assign Trainer to Batch
       parameters:
         - $ref: '#/components/parameters/batchId'
       requestBody:
@@ -1519,6 +1519,8 @@ paths:
                   - id: 1
                     code: inventore-magnam-quasi-est-perspiciatis-et-consequatur-voluptatem-repudiandae-eaque-et-quia-dolores-et-accusantium-reprehenderit-expedita-velit-iure-i
                     institute_id: 1
+                    level: 1
+                    language_medium: 1
                     institute_title: Dr. Cristopher Schiller V
                     institute_title_en: Prof. Shyann Armstrong
                     branch_id: null
@@ -1537,8 +1539,8 @@ paths:
                     target_group_en: possimus magnam quod
                     objectives: Labore totam quisquam est rerum. Cum earum sed doloremque qui nam. Aut sequi voluptas accusamus in dolorem.
                     objectives_en: Ea deleniti corrupti optio nemo dolorum assumenda delectus. Sunt id labore et ipsam quae. Nisi voluptatem consequatur et consequatur. Iste corrupti blanditiis voluptas facilis quae nobis.
-                    contents: Inventore nesciunt asperiores provident eligendi molestiae. Libero dignissimos veniam ipsam vitae. Qui ratione temporibus enim corporis alias non expedita.
-                    contents_en: Quo possimus impedit ullam consequatur voluptatem aspernatur suscipit placeat. Repudiandae voluptatem deleniti modi molestias. Quas ut unde nulla.
+                    lessons: Inventore nesciunt asperiores provident eligendi molestiae. Libero dignissimos veniam ipsam vitae. Qui ratione temporibus enim corporis alias non expedita.
+                    lessons_en: Quo possimus impedit ullam consequatur voluptatem aspernatur suscipit placeat. Repudiandae voluptatem deleniti modi molestias. Quas ut unde nulla.
                     training_methodology: Nesciunt magnam aut dolor nam blanditiis autem laboriosam.
                     training_methodology_en: Eaque laudantium voluptatem et quis et omnis.
                     evaluation_system: Minima quia tempora molestiae sequi provident numquam maxime.
@@ -1580,6 +1582,8 @@ paths:
                 data:
                   id: 1
                   code: inventore-magnam-quasi-est-perspiciatis-et-consequatur-voluptatem-repudiandae-eaque-et-quia-dolores-et-accusantium-reprehenderit-expedita-velit-iure-i
+                  level: 1
+                  language_medium: 1
                   institute_id: 1
                   institute_title: Dr. Cristopher Schiller V
                   institute_title_en: Prof. Shyann Armstrong
@@ -1599,8 +1603,8 @@ paths:
                   target_group_en: possimus magnam quod
                   objectives: Labore totam quisquam est rerum. Cum earum sed doloremque qui nam. Aut sequi voluptas accusamus in dolorem.
                   objectives_en: Ea deleniti corrupti optio nemo dolorum assumenda delectus. Sunt id labore et ipsam quae. Nisi voluptatem consequatur et consequatur. Iste corrupti blanditiis voluptas facilis quae nobis.
-                  contents: Inventore nesciunt asperiores provident eligendi molestiae. Libero dignissimos veniam ipsam vitae. Qui ratione temporibus enim corporis alias non expedita.
-                  contents_en: Quo possimus impedit ullam consequatur voluptatem aspernatur suscipit placeat. Repudiandae voluptatem deleniti modi molestias. Quas ut unde nulla.
+                  lessons: Inventore nesciunt asperiores provident eligendi molestiae. Libero dignissimos veniam ipsam vitae. Qui ratione temporibus enim corporis alias non expedita.
+                  lessons_en: Quo possimus impedit ullam consequatur voluptatem aspernatur suscipit placeat. Repudiandae voluptatem deleniti modi molestias. Quas ut unde nulla.
                   training_methodology: Nesciunt magnam aut dolor nam blanditiis autem laboriosam.
                   training_methodology_en: Eaque laudantium voluptatem et quis et omnis.
                   evaluation_system: Minima quia tempora molestiae sequi provident numquam maxime.
@@ -1642,11 +1646,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/programs'
+                $ref: '#/components/schemas/courses'
               example:
                 data:
                   id: 2
                   code: ZM
+                  level: 1
+                  language_medium: 1
                   title_en: Miss Heath Ondricka
                   title: Tessie Stark PhD
                   institute_id: 1
@@ -1657,7 +1663,7 @@ paths:
                   description: Perspiciatis porro aut eligendi voluptas ea ullam similique.
                   target_group: '3'
                   objectives: Voluptas consequatur similique dignissimos.
-                  contents: Laboriosam aut ab veritatis aperiam eligendi nihil ratione.
+                  lessons: Laboriosam aut ab veritatis aperiam eligendi nihil ratione.
                   training_methodology: Qui sit quia qui rerum accusantium amet non.
                   evaluation_system: Repellendus amet maxime facere porro.
                   prerequisite: Voluptatem non sed nesciunt ab voluptatibus.
@@ -1700,6 +1706,8 @@ paths:
                 data:
                   id: 31
                   code: AE445
+                  level: 1
+                  language_medium: 1
                   institute_id: '1'
                   title_en: PROGRAMME ON RMG4 ei
                   title: আরএমজি-প্রোগ্রাম4 ei
@@ -1708,7 +1716,7 @@ paths:
                   description: very good courses
                   target_group: '5'
                   objectives: An objective
-                  contents: An contents
+                  lessons: An lessons
                   training_methodology: methodo
                   evaluation_system: eval
                   prerequisite: prere
@@ -1750,6 +1758,86 @@ paths:
                   success: true
                   code: 200
                   message: Course delete successfully.
+                  query_time: 0
+  /public/courses/{courseId}:
+    get:
+      parameters:
+        - name: courseId
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: '1'
+      tags:
+        - courses
+      summary: course details
+      description: API endpoint to get a course details.A successful request response will show 200 HTTP status code
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/courses'
+              example:
+                data:
+                  id: 2
+                  code: alias-vero-ut-iure-quia-sit-sint-doloremque-error-enim-voluptas-veritatis-quam-impedit-pariatur-quo-itaque-blanditiis-modi-quaerat-animi-et-autem-id-n
+                  level: 2
+                  language_medium: 1
+                  institute_id: 1
+                  institute_title: Lempi Johns
+                  institute_title_en: Krystel Ernser DVM
+                  branch_id: null
+                  branch_title: null
+                  branch_title_en: null
+                  program_id: 2
+                  program_title: Mose Yundt DVM
+                  program_title_en: Mr. Bryon Bernier
+                  title: Joanny Hayes
+                  title_en: Bertram Mitchell
+                  course_fee: 10533
+                  duration: 62
+                  overview: Nostrum nobis explicabo facilis iure illum cupiditate. Temporibus commodi expedita ducimus dolor. Temporibus accusamus optio quis eum. Accusantium facere ex eos et esse quis autem.
+                  overview_en: Aut sit nemo ut. Natus exercitationem cumque rerum rerum. A explicabo sit nesciunt in enim aut dolorem velit.
+                  target_group: et velit nobis
+                  target_group_en: molestiae quam inventore
+                  objectives: Assumenda numquam commodi minima dolore non impedit. Est pariatur sint deleniti dignissimos. Assumenda deleniti labore repudiandae ut.
+                  objectives_en: Rerum natus temporibus ut fugit doloribus dignissimos quo hic. Accusantium est sint eius sed cumque delectus beatae. Laboriosam cumque est dignissimos maxime.
+                  lessons: Nostrum libero consequatur molestiae magni eum voluptas omnis quam. At nostrum laudantium laboriosam. Dolores aut rerum voluptatum velit asperiores. Ut doloribus adipisci omnis accusantium non.
+                  lessons_en: Non qui sit alias dicta magnam. Delectus repellat est consequuntur architecto libero quis laboriosam. Soluta numquam rerum voluptatum esse laborum.
+                  training_methodology: Maiores saepe odit perferendis maxime.
+                  training_methodology_en: Quod in provident minus earum dolorem laborum.
+                  evaluation_system: Praesentium cupiditate maiores fugit omnis reprehenderit vitae.
+                  evaluation_system_en: Et qui magni ad aperiam.
+                  prerequisite: Ratione voluptate dolore et quod.
+                  prerequisite_en: Voluptas velit voluptates ea aut aliquam.
+                  eligibility: Ut quaerat officia fugiat dolor culpa sunt.
+                  eligibility_en: Odit voluptas nihil consequatur dolorum deleniti officia.
+                  cover_image: softbd.jpg
+                  application_form_settings: null
+                  row_status: 1
+                  created_by: null
+                  updated_by: null
+                  created_at: '2021-10-18T06:26:25.000000Z'
+                  updated_at: '2021-10-18T06:26:27.000000Z'
+                  deleted_at: null
+                  trainers:
+                    - trainer_name: Dr. Zion Crooks
+                      trainer_name_en: Verdie Ratke
+                      email: ozboncak@example.net
+                      mobile: '01746620939'
+                    - trainer_name: Eve Goyette
+                      trainer_name_en: Olaf Muller
+                      email: marcelino45@example.org
+                      mobile: '01775777392'
+                    - trainer_name: Chase Schuster
+                      trainer_name_en: Alberta Keebler
+                      email: augustus53@example.org
+                      mobile: '01709394459'
+                _response_status:
+                  success: true
+                  code: 200
                   query_time: 0
   /trainers:
     get:
@@ -2148,7 +2236,7 @@ paths:
                   query_time: 0
   /courses/{courseId}/training_centers/batches:
     get:
-      summary: training centers with batches
+      summary: Training Centers with Batches
       description: API endpoint to get training centers with batches.A successful request response will show 200 HTTP status code
       parameters:
         - $ref: '#/components/parameters/courseId'
@@ -2637,11 +2725,24 @@ components:
         course_fee:
           type: integer
           example: 0
+        level:
+          type: integer
+          description: 1=>beginner,2=>intermediate,3=>expert
+          enum:
+            - 1
+            - 2
+            - 3
+        language_medium:
+          type: integer
+          description: 1=Bengali,2=>English
+          enum:
+            - 1
+            - 2
         duration:
           type: integer
-        description:
+        overview:
           type: string
-        description_en:
+        overview_en:
           type: string
         target_group:
           type: string
@@ -2651,9 +2752,9 @@ components:
           type: string
         objectives_en:
           type: string
-        contents:
+        lessons:
           type: string
-        contents_en:
+        lessons_en:
           type: string
         training_methodology:
           type: string
@@ -2667,6 +2768,13 @@ components:
           type: string
         prerequisite_en:
           type: string
+        skills:
+          type: array
+          minItems: 1
+          maxItems: 10
+          items:
+            type: integer
+            uniqueItems: true
         eligibility:
           type: string
         eligibility_en:
@@ -2685,24 +2793,16 @@ components:
             - 0
           example: 1
         created_by:
-          type: string
-          format: date-time
+          type: integer
         updated_by:
-          type: string
-          format: date-time
-        created_at:
-          type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
-        deleted_at:
-          type: string
-          format: date-time
+          type: integer
       required:
         - code
         - institute_id
+        - skills
         - title
+        - level
+        - language_medium
     trainers:
       type: object
       description: Batch management Service
